--- a/src/geral.scss
+++ b/src/geral.scss
@@ -14,4 +14,7 @@ body {
 html{
     scroll-behavior: smooth;
 }
-
+.btn-success{
+    background-color: rgb(94, 196, 94) !important;
+    border:none !important;
+}
