--- a/src/pages/Login/login.scss
+++ b/src/pages/Login/login.scss
@@ -1,3 +1,15 @@
+$branco:#ffffff;
+$cinza1:#f2f2f2;
+$cinza2:#cfcfcf;
+$cinza3:#a8a8a8;
+$cinza4:#818181;
+$vermelho1:#ff6e6e;
+$vermelho2:#ff5757;
+$vermelho3:#ff2b2b;
+$vermelhoOpacity25:rgba(255, 43, 43,0.25);
+$azul1:#38568a;
+
+
 //Classes para exportação - complementos
 
 .alignCenter{
@@ -62,13 +74,17 @@
     border-radius:200px !important;
     border:0 !important;
     font-size:0.8rem !important;
-    background-color:rgba(235, 235, 235,1) !important;
+    background-color:rgb(255, 255, 255) !important;
     height:35px;
+    outline: none !important;
 }
 .form-control:hover{
     box-shadow: 0px 0px 8px 2px rgba(235, 235, 235,0.4);
 }
-
+.form-control:focus {
+    border-color: $vermelho1 !important;
+    box-shadow: 0 0 0 0.2rem  $vermelhoOpacity25 !important;
+} 
 //Link (esqueceu sua senha) ------------------------
 
 .link{
