--- a/src/pages/Upload/Upload.scss
+++ b/src/pages/Upload/Upload.scss
@@ -10,14 +10,16 @@ $vermelho3:#ff2b2b;
 $vermelhoOpacity50:rgba(255, 43, 43,0.5);
 $azul1:#38568a;
 
-
-
-body,html{
-    font-family: 'Montserrat';
-    
+@keyframes surgir {
+    from { opacity: 0}
+    to   { opacity: 1}
+}
+@keyframes surgirWidth {
+    from { width: 0}
+    to   { width: 100%}
 }
 
-
+//----------------------------- Grid -----------------------------------
 
 .containerGrid{
     display:grid;
@@ -89,6 +91,8 @@ body,html{
     cursor:pointer;
 }
 
+//----------------------------- Componentes -----------------------------------
+
 .containerArquivo{
     display:flex;
     align-items:center;
@@ -134,25 +138,37 @@ body,html{
         width:7vh;
         filter: invert(50%);
         cursor:pointer;
+        transition:0.5s;
+    }
+    img:hover{
+        transform:scale(1.2)
     }
 }
 .buscar{
     display:flex;
     justify-content:center;
     align-items:center;
+    cursor:pointer;
+    transition:0.5s;
     img{
         width:40px;
         height:40px;
         padding:10px;
-        filter: invert(100%)
+        filter: invert(100%);
+        transition:0.5s;
+    }
+    img:hover{
+        transition:0.5s;
+        transform:scale(1.2)
     }
 }
-//--------------- CSS Modais ----------------
-
-@keyframes surgir {
-    from { opacity: 0}
-    to   { opacity: 1}
+.inputBuscar{
+    transition:0.5s;
+    animation: surgirWidth 1s;
+    margin-right:10px;
+    margin-left:5px;
 }
+//----------------------------- Modal -----------------------------------
 
 .containerModal{
     width:400px;
@@ -170,7 +186,6 @@ body,html{
     min-width: 100vw;
     min-height:100vh;
     background-color:rgba(0, 0, 0, 0.2);
-    transition:0.5s;
 }
 .modalUploadSessao1{
     display:flex;
@@ -178,9 +193,9 @@ body,html{
     justify-content:center;
     padding:15px;
     border-bottom:solid 1px $cinza2;
+    margin-top:10px;
     h5{
         color:$cinza4;
-        line-height:100%;
     }
 }
 .modalUploadSessao2{
@@ -205,7 +220,13 @@ body,html{
         
     }
 }
- //------------ Checkbox -------------------
+.labelInputModal{
+        margin:10px;
+        color:$cinza4;
+}
+ //----------------------------- Checkbox -----------------------------------
+
+
 .containerCheckboxMaior{
     
     display:flex;
